zero-schema-macros/tests/ui/fail/13_zero_sized_member.rs
use zero_schema_macros::zero;

#[zero]
struct ZeroSizedMember {
    marker: (),
}

fn main() {}
