zero-schema-macros/tests/ui/fail/13_zero_sized_member.stderr
error: unsupported schema field type
 --> tests/ui/fail/13_zero_sized_member.rs:5:13
  |
5 |     marker: (),
  |             ^^
